# SNNS

./: CMakeLists.txt  Readme  Readme.install  Readme.linux
contrib/enzo/: CMakeLists.txt  README  README.ENZO  enzo
contrib/enzo/benchmarks/: .make.state  makefile
contrib/enzo/benchmarks/n10/: README.N10  n10.cmd  n10.net  n10.pat  n10i.cmd  xn10.cmd  xn10i.cmd
contrib/enzo/benchmarks/sa/: README.SA  sa.cmd  sa.net  sa_learn.pat  sa_test.pat  xsa.cmd
contrib/enzo/benchmarks/spirale/: README.SPI  spi.cmd  spi_trn.pat  spi_tst.pat  spirale1.net  xspi.cmd
contrib/enzo/benchmarks/tc/: README.TC  tc.cmd  tc.net  tc.pat  xtc.cmd
contrib/enzo/benchmarks/xor/: README.XOR  xor.cmd  xor.net  xor.pat  xxor.cmd
contrib/enzo/doc/: .make.state  enzo.ps
contrib/enzo/doc/bilder/: ablauf.eps  algo.eps  bypass_mot.epsf  enzo.eps  grmpf.ps  knete.eps  knete_bild.tex  knete_dev.eps  link.eps  logo.ps  operator.eps  pfeil.ps  pop_list.pstex  prune.eps  softpruning.eps  system3.eps  tc.eps
contrib/enzo/doc/english/: .make.state  command.tex  crossover.tex  devman.tex  enzo.bib  enzo.idx  enzo.ilg  enzo.index  enzo.oldindex  enzo.tex  evaluation.tex  examples.tex  flong2.bst  flong2.sty  history.tex  intro.tex  makefile  mutation.tex  mymacros.tex  opt.tex  post_evolution.tex  pre_evolution.tex  selection.tex  stop_evolution.tex  survival.tex  userman.tex
contrib/enzo/src/: .make.dependency.667.0  .make.state  .nse_depinfo  allsub  enzo.c  enzo.h  m_table.c  makefile  networkData.c  networkData.h  proto.h  subUtils.c  subUtils.h
contrib/enzo/src/crossover/: .make.state  implant.c  implant.h  implant.tex  linCross.c  linCross.h  linCross.tex  makefile
contrib/enzo/src/eval/: .make.state  bestGuessHigh.c  bestGuessHigh.h  bestGuessHigh.tex  bestGuessLow.c  bestGuessLow.h  bestGuessLow.tex  classes.c  classes.h  classes.tex  distClass.c  distClass.h  learnRating.c  learnRating.h  learnRating.tex  makefile  topoEval.c  topoEval.h  topoRating.c  topoRating.h  topologyRating.h  topologyRating.tex  tssEval.c  tssEval.h  tssEval.tex
contrib/enzo/src/examples/: makefile  my_module.c  my_module.h  my_module.tex
contrib/enzo/src/history/: .make.state  Xhist.c  Xhist.h  Xhist.tex  ancestry.c  ancestry.h  ancestry.tex  histCross.c  histCross.h  histCross.tex  histDetails.c  histDetails.h  histFitness.c  histFitness.h  histFitness.tex  histInputs.c  histInputs.h  histInputs.tex  histSimple.c  histSimple.h  histSimple.tex  histUtils.c  histUtils.h  histWeights.c  histWeights.h  histWeights.tex  makefile  saveThem.c  saveThem.h
contrib/enzo/src/mutation/: .make.state  makefile  mutInputs.c  mutInputs.h  mutInputs.tex  mutLinks.c  mutLinks.h  mutLinks.tex  mutUnits.c  mutUnits.h  mutUnits.tex  simpleMut.c  simpleMut.h  simpleMut.tex
contrib/enzo/src/nepomuk/: .make.dependency.21496.0  .make.state  kr_shell.c  kr_shell.h  makefile  nepomuk.c  nepomuk.h
contrib/enzo/src/opt/: .make.state  adapPrune.c  adapPrune.h  adapPrune.tex  cleanup.c  cleanup.h  cleanup.tex  jogWeights.c  jogWeights.h  jogWeights.tex  learnCV.c  learnCV.h  learnCV.tex  learnINIT.c  learnINIT.h  learnSNNS.c  learnSNNS.h  learnSNNS.tex  makefile  nullWeg.c  nullWeg.h  nullWeg.tex  prune.c  prune.fig  prune.h  prune.tex  prunePic.tex  relearn.c  relearn.h  relearn.tex
contrib/enzo/src/post/: .make.state  makefile  saveAll.c  saveAll.h  saveAll.tex
contrib/enzo/src/pre/: .make.state  genpopNepomuk.c  genpopNepomuk.h  genpopNepomuk.tex  hiddenInitPop.c  hiddenInitPop.h  hiddenInitPop.tex  initPop.c  initPop.h  initPop.tex  initTrain.c  initTrain.h  initTrain.tex  inputInit.c  inputInit.h  inputInit.tex  loadPop.c  loadPop.h  loadPop.tex  loadSNNSPat.c  loadSNNSPat.h  loadSNNSPat.tex  makefile  optInitPop.c  optInitPop.h  optInitPop.tex  startPop.c  startPop.h  startPop.tex  weightInit.c  weightInit.h  weightInit.tex
contrib/enzo/src/selection/: .make.state  makefile  preferSel.c  preferSel.h  preferSel.tex  uniformSel.c  uniformSel.h  uniformSel.tex
contrib/enzo/src/stop/: .make.state  makefile  stopErr.c  stopErr.h  stopErr.tex  stopIt.c  stopIt.h  stopIt.tex
contrib/enzo/src/survival/: .make.state  fittest.c  fittest.h  fittest.tex  makefile
contrib/nessus/: CMakeLists.txt  Readme  build  cleanup  configure
contrib/nessus/compiler/: Readme
contrib/nessus/compiler/docu/: README  aufbau.tex  ausdruecke.tex  b_clust.tex  b_colmap.tex  b_cons.tex  b_letter.tex  b_map.tex  b_necker.tex  b_param.tex  b_sel.tex  b_type.tex  b_unit.tex  buchstabe.ps  compiler.tex  einleitung.tex  f_map.tex  zug.cfg  (+21 more)
contrib/nessus/configuration/: compilerstuff  depend.compiler  header  pc386.compiler  sed.script  sed.sparc.makefile  sun3.compiler
contrib/vistra/: CMakeLists.txt  Makefile  README.1  README.2  batch.c  coll.c  crtwdgts.c  def.h  down  draw.c  eh.c  fin.c  format.c  fout.c  globals.c  gw.c  hook  init.c  int2.c  left.h  lvq.c  misc.c  n01.c  patterns.c  ssw.c  strdlg.c  symtab.c  uif.c  up.h  veccoll.c  vector.c  vistra.c  xvis.h
contrib/vistra/doku/: README  cov.ps  diplomtitel.sty  fillup.ps  gray.ps  histo.ps  lit.tex  main.ps  poly.ps  proj2D.ps  readsh.ps  sa.ps  sa.tex  sa1.tex  sa2.tex  sa3.tex  sa4.tex  sa5.tex  sa6.tex  stat.ps  title.tex
contrib/vistra/formats/: example0.fmt  example1.fmt  example2.fmt  example3.fmt  example4.fmt  example5.fmt  pat.fmt
kernel/: CMakeLists.txt
kernel/sources/: alloca.c  alloca.h  art_typ.h  art_ui.c  art_ui.h  art_ui.ph  arttr_f.c  arttr_f.h  arttr_f.ph  calc_err.c  cc_display.c  cc_display.h  cc_display.ph  cc_glob.c  cc_glob.h  cc_glob.ph  cc_learn.c  cc_learn.h  cc_learn.ph  cc_mac.h  cc_modify.c  cc_modify.h  cc_modify.ph  cc_prune.c  cc_prune.h  cc_prune.ph  cc_type.h  dlvq_learn.c  dlvq_learn.h  dlvq_type.h  enzo_mem_typ.h  ext_typ.h  func_mac.h  func_tbl.c  func_tbl.h  getcwd.c  getcwd.h  glob_typ.h  init_f.c  init_f.h  (+71 more)
tools/: CMakeLists.txt
tools/sources/: gram1.tab.c.bak  gram1.y  ic_snns.c  lex.yyy.c  lex.yyz.c  netperf.c  scan1.l  scan2.l  snnsbat.c
xgui/: CMakeLists.txt
xgui/sources/: d3_anageo.c  d3_anageo.ph  ui_controlP.c  ui_file.c  ui_main.c
(+126 files in other folders)
